pd3/python_pd3Parser.py
# Generated from python_pd3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class python_pd3Parser ( Parser ):

    grammarFileName = "python_pd3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'and'", "'or'", "'not'", "'if'", "'elif'", 
                     "'else'", "'while'", "'for'", "'in'", "'range'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','", "':'", "<INVALID>", "'='", "'+='", "'-='", "'*='", 
                     "'/='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LESS", "LESSEQ", "GRTR", "GRTREQ", "EQL", 
                      "NEQL", "ADD", "SUB", "MUL", "DIV", "MOD", "AND", 
                      "OR", "NOT", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
                      "IN", "RANGE", "VARIABLE", "NUMBER", "STRING", "COMMENT", 
                      "MULTI_COMMENT", "COMMA", "COLON", "NEWLINE", "ASSIGN", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "WS", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_if_block = 3
    RULE_elif_clause = 4
    RULE_else_clause = 5
    RULE_while_loop = 6
    RULE_for_loop = 7
    RULE_block = 8
    RULE_expression = 9
    RULE_condition = 10
    RULE_list = 11
    RULE_iterable = 12
    RULE_comparison = 13

    ruleNames =  [ "program", "statement", "assignment", "if_block", "elif_clause", 
                   "else_clause", "while_loop", "for_loop", "block", "expression", 
                   "condition", "list", "iterable", "comparison" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    LESS=5
    LESSEQ=6
    GRTR=7
    GRTREQ=8
    EQL=9
    NEQL=10
    ADD=11
    SUB=12
    MUL=13
    DIV=14
    MOD=15
    AND=16
    OR=17
    NOT=18
    IF=19
    ELIF=20
    ELSE=21
    WHILE=22
    FOR=23
    IN=24
    RANGE=25
    VARIABLE=26
    NUMBER=27
    STRING=28
    COMMENT=29
    MULTI_COMMENT=30
    COMMA=31
    COLON=32
    NEWLINE=33
    ASSIGN=34
    ADD_ASSIGN=35
    SUB_ASSIGN=36
    MUL_ASSIGN=37
    DIV_ASSIGN=38
    WS=39
    INDENT=40
    DEDENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.NEWLINE)
            else:
                return self.getToken(python_pd3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = python_pd3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8670150656) != 0):
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19, 22, 23, 26]:
                    self.state = 28
                    self.statement()
                    pass
                elif token in [33]:
                    self.state = 29
                    self.match(python_pd3Parser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(python_pd3Parser.AssignmentContext,0)


        def if_block(self):
            return self.getTypedRuleContext(python_pd3Parser.If_blockContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(python_pd3Parser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(python_pd3Parser.For_loopContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = python_pd3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.assignment()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.if_block()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.while_loop()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 38
                self.for_loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(python_pd3Parser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(python_pd3Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(python_pd3Parser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(python_pd3Parser.SUB_ASSIGN, 0)

        def MUL_ASSIGN(self):
            return self.getToken(python_pd3Parser.MUL_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(python_pd3Parser.DIV_ASSIGN, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = python_pd3Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(python_pd3Parser.VARIABLE)
                self.state = 42
                self.match(python_pd3Parser.ASSIGN)
                self.state = 43
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.match(python_pd3Parser.VARIABLE)
                self.state = 45
                self.match(python_pd3Parser.ADD_ASSIGN)
                self.state = 46
                self.expression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.match(python_pd3Parser.VARIABLE)
                self.state = 48
                self.match(python_pd3Parser.SUB_ASSIGN)
                self.state = 49
                self.expression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.match(python_pd3Parser.VARIABLE)
                self.state = 51
                self.match(python_pd3Parser.MUL_ASSIGN)
                self.state = 52
                self.expression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.match(python_pd3Parser.VARIABLE)
                self.state = 54
                self.match(python_pd3Parser.DIV_ASSIGN)
                self.state = 55
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(python_pd3Parser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(python_pd3Parser.ConditionContext,0)


        def COLON(self):
            return self.getToken(python_pd3Parser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(python_pd3Parser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def elif_clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.Elif_clauseContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.Elif_clauseContext,i)


        def else_clause(self):
            return self.getTypedRuleContext(python_pd3Parser.Else_clauseContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)




    def if_block(self):

        localctx = python_pd3Parser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(python_pd3Parser.IF)
            self.state = 59
            self.condition(0)
            self.state = 60
            self.match(python_pd3Parser.COLON)
            self.state = 61
            self.match(python_pd3Parser.NEWLINE)
            self.state = 62
            self.block()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 63
                self.elif_clause()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 69
                self.else_clause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(python_pd3Parser.ELIF, 0)

        def condition(self):
            return self.getTypedRuleContext(python_pd3Parser.ConditionContext,0)


        def COLON(self):
            return self.getToken(python_pd3Parser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(python_pd3Parser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_elif_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_clause" ):
                listener.enterElif_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_clause" ):
                listener.exitElif_clause(self)




    def elif_clause(self):

        localctx = python_pd3Parser.Elif_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elif_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(python_pd3Parser.ELIF)
            self.state = 73
            self.condition(0)
            self.state = 74
            self.match(python_pd3Parser.COLON)
            self.state = 75
            self.match(python_pd3Parser.NEWLINE)
            self.state = 76
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(python_pd3Parser.ELSE, 0)

        def COLON(self):
            return self.getToken(python_pd3Parser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(python_pd3Parser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_else_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_clause" ):
                listener.enterElse_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_clause" ):
                listener.exitElse_clause(self)




    def else_clause(self):

        localctx = python_pd3Parser.Else_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(python_pd3Parser.ELSE)
            self.state = 79
            self.match(python_pd3Parser.COLON)
            self.state = 80
            self.match(python_pd3Parser.NEWLINE)
            self.state = 81
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(python_pd3Parser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(python_pd3Parser.ConditionContext,0)


        def COLON(self):
            return self.getToken(python_pd3Parser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(python_pd3Parser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)




    def while_loop(self):

        localctx = python_pd3Parser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(python_pd3Parser.WHILE)
            self.state = 84
            self.condition(0)
            self.state = 85
            self.match(python_pd3Parser.COLON)
            self.state = 86
            self.match(python_pd3Parser.NEWLINE)
            self.state = 87
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(python_pd3Parser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(python_pd3Parser.VARIABLE, 0)

        def IN(self):
            return self.getToken(python_pd3Parser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(python_pd3Parser.IterableContext,0)


        def COLON(self):
            return self.getToken(python_pd3Parser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(python_pd3Parser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = python_pd3Parser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(python_pd3Parser.FOR)
            self.state = 90
            self.match(python_pd3Parser.VARIABLE)
            self.state = 91
            self.match(python_pd3Parser.IN)
            self.state = 92
            self.iterable()
            self.state = 93
            self.match(python_pd3Parser.COLON)
            self.state = 94
            self.match(python_pd3Parser.NEWLINE)
            self.state = 95
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(python_pd3Parser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(python_pd3Parser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.StatementContext,i)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = python_pd3Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(python_pd3Parser.INDENT)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.statement()
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 80216064) != 0)):
                    break

            self.state = 103
            self.match(python_pd3Parser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,i)


        def list_(self):
            return self.getTypedRuleContext(python_pd3Parser.ListContext,0)


        def STRING(self):
            return self.getToken(python_pd3Parser.STRING, 0)

        def NUMBER(self):
            return self.getToken(python_pd3Parser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(python_pd3Parser.VARIABLE, 0)

        def ADD(self):
            return self.getToken(python_pd3Parser.ADD, 0)

        def SUB(self):
            return self.getToken(python_pd3Parser.SUB, 0)

        def MUL(self):
            return self.getToken(python_pd3Parser.MUL, 0)

        def DIV(self):
            return self.getToken(python_pd3Parser.DIV, 0)

        def MOD(self):
            return self.getToken(python_pd3Parser.MOD, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = python_pd3Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 106
                self.match(python_pd3Parser.T__0)
                self.state = 107
                self.expression(0)
                self.state = 108
                self.match(python_pd3Parser.T__1)
                pass
            elif token in [3]:
                self.state = 110
                self.list_()
                pass
            elif token in [28]:
                self.state = 111
                self.match(python_pd3Parser.STRING)
                pass
            elif token in [27]:
                self.state = 112
                self.match(python_pd3Parser.NUMBER)
                pass
            elif token in [26]:
                self.state = 113
                self.match(python_pd3Parser.VARIABLE)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 131
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = python_pd3Parser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 116
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 117
                        self.match(python_pd3Parser.ADD)
                        self.state = 118
                        self.expression(11)
                        pass

                    elif la_ == 2:
                        localctx = python_pd3Parser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 119
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 120
                        self.match(python_pd3Parser.SUB)
                        self.state = 121
                        self.expression(10)
                        pass

                    elif la_ == 3:
                        localctx = python_pd3Parser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 122
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 123
                        self.match(python_pd3Parser.MUL)
                        self.state = 124
                        self.expression(9)
                        pass

                    elif la_ == 4:
                        localctx = python_pd3Parser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 125
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 126
                        self.match(python_pd3Parser.DIV)
                        self.state = 127
                        self.expression(8)
                        pass

                    elif la_ == 5:
                        localctx = python_pd3Parser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 128
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 129
                        self.match(python_pd3Parser.MOD)
                        self.state = 130
                        self.expression(7)
                        pass

             
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,i)


        def comparison(self):
            return self.getTypedRuleContext(python_pd3Parser.ComparisonContext,0)


        def NOT(self):
            return self.getToken(python_pd3Parser.NOT, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ConditionContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ConditionContext,i)


        def AND(self):
            return self.getToken(python_pd3Parser.AND, 0)

        def OR(self):
            return self.getToken(python_pd3Parser.OR, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = python_pd3Parser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 26, 27, 28]:
                self.state = 137
                self.expression(0)
                self.state = 138
                self.comparison()
                self.state = 139
                self.expression(0)
                pass
            elif token in [18]:
                self.state = 141
                self.match(python_pd3Parser.NOT)
                self.state = 142
                self.condition(3)
                pass
            else:
                raise NoViableAltException(self)
